Many Swing tests are failing because of a GTK lib

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 7
    • Affects Version/s: 7
    • Component/s: client-libs
    • None
    • b94
    • generic, sparc
    • generic, solaris

      Many of the functional Swing tests are failing in Solaris when GTK look and feel is used. Few regression tests also failed for the same reason.

      Also could be reproduced using SwingSet2

      To Reproduce:

      1. Run SwingSet2 using the PIT build (7 b94)
      2. Switch to the GTK look and Feel
      3. Notice the following messages on the console / terminal

      dtftest@sfsparc001:...laris_sparc/demo/jfc/SwingSet2$ ../../../bin/java -jar SwingSet2.jar
      Exception in thread "AWT-EventQueue-0" java.lang.InternalError: Unable to load native GTK libraries
      at com.sun.java.swing.plaf.gtk.GTKLookAndFeel.initialize(GTKLookAndFeel.java:1447)
      at javax.swing.UIManager.setLookAndFeel(UIManager.java:531)
      at javax.swing.UIManager.setLookAndFeel(UIManager.java:576)
      at SwingSet2.updateLookAndFeel(SwingSet2.java:1017)
      at SwingSet2.setLookAndFeel(SwingSet2.java:982)
      at SwingSet2$ChangeLookAndFeelAction.actionPerformed(SwingSet2.java:1169)
      at javax.swing.AbstractButton.fireActionPerformed(AbstractButton.java:2015)
      at javax.swing.AbstractButton$Handler.actionPerformed(AbstractButton.java:2338)
      at javax.swing.DefaultButtonModel.fireActionPerformed(DefaultButtonModel.java:402)
      at javax.swing.JToggleButton$ToggleButtonModel.setPressed(JToggleButton.java:308)
      at javax.swing.AbstractButton.doClick(AbstractButton.java:376)
      at javax.swing.plaf.basic.BasicMenuItemUI.doClick(BasicMenuItemUI.java:833)
      at javax.swing.plaf.basic.BasicMenuItemUI$Handler.mouseReleased(BasicMenuItemUI.java:877)
      at java.awt.Component.processMouseEvent(Component.java:6434)
      at javax.swing.JComponent.processMouseEvent(JComponent.java:3321)
      at java.awt.Component.processEvent(Component.java:6199)
      at java.awt.Container.processEvent(Container.java:2203)
      at java.awt.Component.dispatchEventImpl(Component.java:4790)
      at java.awt.Container.dispatchEventImpl(Container.java:2261)
      at java.awt.Component.dispatchEvent(Component.java:4616)
      at java.awt.LightweightDispatcher.retargetMouseEvent(Container.java:4803)
      at java.awt.LightweightDispatcher.processMouseEvent(Container.java:4463)
      at java.awt.LightweightDispatcher.dispatchEvent(Container.java:4393)
      at java.awt.Container.dispatchEventImpl(Container.java:2247)
      at java.awt.Window.dispatchEventImpl(Window.java:2671)
      at java.awt.Component.dispatchEvent(Component.java:4616)
      at java.awt.EventQueue.dispatchEvent(EventQueue.java:651)
      at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:255)
      at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:170)
      at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:160)
      at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:155)
      at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:147)
      at java.awt.EventDispatchThread.run(EventDispatchThread.java:136)

            Assignee:
            Anthony Petrov (Inactive)
            Reporter:
            Asha Manicka (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: