6953275: Many Swing tests are failing because of a GTK lib

Reviewed-by: art, dcherepanov